--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="textos">
         <h1>Aprendizado personalizado</h1>
-        <p>Conteudo aqui.</p>
+        <p>Facilitando sua jornada até a ETEC — com foco, apoio e conteúdos que realmente ajudam.</p>
       </div>
     </div>
 
@@ -41,7 +41,7 @@
       </div>
       <div class="textos">
         <h1>Acelere Seus Resultados!</h1>
-        <p>Conteúdo do terceiro slide aqui.</p>
+        <p>Dicas, simulados e conteúdos organizados para você passar no Vestibulinho com segurança.</p>
       </div>
     </div>
 
@@ -52,7 +52,7 @@
     </div>
       <div class="textos">
         <h1>Aprenda da melhor forma!</h1>
-        <p>Mensagem do quarto slide aqui.</p>
+        <p>Conteúdo direto ao ponto, sem enrolação. Do seu jeito, pro seu futuro.</p>
       </div>
       <!-- Adicionando os botões no quarto slide -->
       <div class="buttons-container">
